--- a/src/app/pages/about-me/about-me.html
+++ b/src/app/pages/about-me/about-me.html
@@ -1,1 +1,4 @@
-<p>about-me works!</p>
+
+<div class="Section">
+    <button  class="Button" (click)="redirectToAboutMe()">Navigate to Home Page</button>
+</div>
