--- a/src/app/pages/home-page/home-page.html
+++ b/src/app/pages/home-page/home-page.html
@@ -1,3 +1,3 @@
 <div class="Section">
-    <button  class="Button" (click)="redirectToAboutMe()">About Me</button>
+    <button  class="Button" (click)="redirectToAboutMe()">Navigate to About Me</button>
 </div>
