--- a/src/app/pages/about-me/about-me.html
+++ b/src/app/pages/about-me/about-me.html
@@ -1,4 +1,4 @@
 
 <div class="Section">
-    <button  class="Button" (click)="redirectToAboutMe()">Navigate to Home Page</button>
+    <button  class="Button" (click)="redirectToHomePage()">Navigate to Home Page</button>
 </div>
