--- a/src/app/pages/home-page/home-page.html
+++ b/src/app/pages/home-page/home-page.html
@@ -1,3 +1,6 @@
 <div class="Section">
     <button  class="Button" (click)="redirectToAboutMe()">Navigate to About Me</button>
+<button class="Button">Add</button>
+<input type="text">
+<input type="text">
 </div>
