--- a/src/app/pages/home-page/home-page.html
+++ b/src/app/pages/home-page/home-page.html
@@ -2,5 +2,5 @@
     <button  class="Button" (click)="redirectToAboutMe()">Navigate to About Me</button>
     <input type="text">
     <input type="text">
-    <button class="Button">Add</button>
+    <button class="Button" (click)="handleAdd()">Add</button>
 </div>  
