--- a/src/app/pages/home-page/home-page.html
+++ b/src/app/pages/home-page/home-page.html
@@ -1,6 +1,6 @@
 <div class="Section">
-    <button  class="Button" (click)="redirectToAboutMe()">Navigate to About Me</button>
-    <input type="text">
-    <input type="text">
-    <button class="Button" (click)="handleAdd()">Add</button>
-</div>  
+  <button class="Button" (click)="redirectToAboutMe()">Navigate to About Me</button>
+  <input type="text" />
+  <input type="text" />
+  <button class="Button" (click)="handleAdd()">Add</button>
+</div>
